[metadata]
name = circle_of_love
version = attr: src.circle_of_love.__version__
description = "Circle of Love, a small game"
long_description = file: README.md
author_email = couesl@gmail.com 
classifiers=
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    pygame

[options.packages.find]
where=src
